--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.1",
+    "react-test-renderer": "^16.13.1",
     "react-transition-group": "^4.2.2",
     "uuid": "^3.3.2"
   },
