--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "react-scripts": "^3.4.1",
     "react-test-renderer": "^16.13.1",
     "react-transition-group": "^4.2.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "uuid": "^3.3.2"
   },
   "scripts": {
